# ehr_simulator

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  example_questions.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: .gitignore  example_config.yaml  example_questions.yaml
docs/: data-contract.md
examples/: config.yaml  geneva-config.yaml
scripts/: build_geneva_units.py  gen_data_contract.py  round03_vitals_mockup.py
specs/: ROADMAP.md  session-01-data-contract.md  session-02-thin-ui-synthetic.md  session-03-geneva-adapter.md  session-04-mimic-adapter.md  session-05-config-and-cli.md
specs/feedback/: session-02-feedback.md
src/ehr_simulator/: __init__.py  cli.py  cli_support.py  logging.py
src/ehr_simulator/config/: __init__.py  exceptions.py  loader.py  questions.py  study.py
src/ehr_simulator/ingestion/: __init__.py  _shared.py  canonical.py  exceptions.py  geneva.py  mimic.py  synthetic.py
src/ehr_simulator/ingestion/data/: geneva_units.json
src/ehr_simulator/web/: __init__.py  app.py  charts.py  middleware.py  panels.py  routes.py
src/ehr_simulator/web/static/: keyboard.js  theme.css
src/ehr_simulator/web/templates/: _chrome_dense.html  _chrome_epic.html  _panel_admission.html  _panel_ai.html  _panel_error.html  _panel_imaging.html  _panel_labs.html  _panel_vitals.html  _patient_view.html  _summary_card.html  base.html  index.html
tests/: conftest.py  test_a11y.py  test_app.py  test_canonical.py  test_charts.py  test_cli.py  test_config.py  test_csp.py  test_data_contract.py  test_geneva.py  test_geneva_real.py  test_logging.py  test_mimic.py  test_mimic_real.py  test_panels.py  test_routes.py  test_shared.py  test_static_assets.py  test_synthetic.py
tests/e2e/: conftest.py  test_synthetic_walk.py
tests/fixtures/: build_geneva_fixture.py  categorical_variable_encoding.csv  normalisation_parameters.csv
tests/fixtures/geneva/: build_geneva_fixture.py  geneva_fixture_expected.json  geneva_sample.csv
tests/fixtures/mimic/: build_mimic_fixture.py  categorical_variable_encoding.csv  mimic_fixture_expected.json  mimic_sample.csv  reference_population_normalisation_parameters.csv
tests/fixtures/study/: questions.yaml  questions_broken_categorical_no_options.yaml  questions_broken_duplicate_id.yaml  questions_broken_duplicate_options.yaml  questions_broken_likert_no_scale.yaml  study_broken_bad_time_unit.yaml  study_broken_duplicate_patient.yaml  study_broken_missing_schema_version.yaml  study_broken_unknown_dataset.yaml  study_broken_wrong_schema_version.yaml  study_geneva.yaml  study_mimic.yaml  study_synthetic.yaml
