[project]
name = "ehr_simulator"
version = "0.0.1"
description = "Browser-based EHR simulator for clinician-AI decision studies."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pandera[pandas]>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ehr_simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
