[project]
name = "ehr_simulator"
version = "0.0.1"
description = "Browser-based EHR simulator for clinician-AI decision studies."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pandera[pandas]>=0.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "plotnine>=0.13",
    "structlog>=24.4",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.scripts]
ehr-simulator = "ehr_simulator.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "httpx>=0.27",
    "pytest-playwright>=0.5",
    "beautifulsoup4>=4.12",
    "freezegun>=1.5",
    "openpyxl>=3.1",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ehr_simulator"]

[tool.hatch.build.targets.wheel.force-include]
"src/ehr_simulator/ingestion/data/geneva_units.json" = "ehr_simulator/ingestion/data/geneva_units.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --strict-markers -m 'not e2e and not real_data'"
markers = [
    "e2e: end-to-end Playwright tests (require chromium installed)",
    "real_data: opt-in smoke tests against the real Geneva CSV (~1.5 GB)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
